# weather_app

./: pyproject.toml
configs/: coordinates.csv  coordinates.json
data/raw/: forecasts.json
data/raw/forecasts/: juiz_de_fora.json  rio_de_janeiro.json
data/transformed/: forecasts.parquet
notebooks/: eda.ipynb
src/weather_app/: __init__.py  configs.py  schemas.py
src/weather_app/pipelines/ingest/: fetch_forecasts.py  get_forecasts.py
src/weather_app/pipelines/transform/: merge_forecasts.py  transform_forecasts.py
src/weather_app/utils/: readers.py  request_api.py  request_weather_api.py  wrangling.py  writers.py
