[project]
name = "weather-app"
version = "0.1.0"
description = "A simple app for getting weather forecasts"
readme = "README.md"
authors = [
    { name = "Renan Pereira", email = "renanpereira1204@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2025.12.0",
    "jupyterlab>=4.5.3",
    "mypy>=1.19.1",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "pyarrow>=23.0.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
]

[project.scripts]
weather-app = "weather_app:main"
fetch-forecasts = "weather_app.pipelines.ingest.fetch_forecasts:fetch_forecasts"
merge_forecasts = "weather_app.pipelines.transform.merge_forecasts:merge_forecasts"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths=["tests"]
pythonpath=["src"]
